--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </head>
-  <body>
-    <h1>{{"Hello, Angular!"}}</h1>
-  </body>
+   <body ng-controller="StoreController as store">
+    <div class="product row">
+      <h3>
+
+        <em class="pull-right">{{store.product.name}}</em>
+      </h3>
+    </div>
 </html>
