--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script type="text/javascript" src="js/app.js"></script>
   </head>
    <body ng-controller="StoreController as store">
-    <div class="product row">
+    <div class="product row" ng-hide="store.product.soldOut">
       <h3>
-
-        <em class="pull-right">{{store.product.name}}</em>
+        {{store.product.name}}
+        <em class="pull-right">{{store.product.price}}</em>
       </h3>
+      <button ng-show="store.product.canPurchase" >Add to Cart</button>
     </div>
 </html>
