add images and deep looping

--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <div class="product row" ng-repeat="product in store.products">
       <h3>
         {{product.name}}
-        <em class="pull-right">{{product.price}}</em>
+        <em class="pull-right">{{product.price | currency }}</em>
       </h3>
-      <button ng-show="product.canPurchase" >Add to Cart</button>
+     <div class="gallery" ng-show="product.images.length">
+        <!-- Image Gallery  -->
+      <img class="img img-circle img-thumbnail center-block" ng-src="{{product.images[0]}}" />
+      <ul class="clearfix">
+        <li class="small-image pull-left thumbnail" ng-repeat="image in product.images"> <img ng-src="{{image}}" /> </li>
+      </ul>
     </div>
+  </div>
 </html>
