add live preview of form

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
           <form name="reviewForm">
             <!--  Live Preview -->
             <blockquote>
+              <strong>{{review.stars}} Stars</strong>
+              {{review.body}}
+              <cite class="clearfix">—{{review.author}}</cite>
+            </blockquote>
+            <blockquote>
               <strong> Stars</strong>
 
               <cite class="clearfix">—</cite>
